fix: Update .gitignore to include frontend public directory and fix deployment issues
- Remove global 'public' ignore that was preventing React's public directory from being tracked
- Add .env to frontend .gitignore for security
- Include essential frontend public assets needed for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,7 @@ typings/
 
 # Gatsby files
 .cache/
-public
+# Note: Gatsby's public folder is ignored, but React's public folder should be tracked
 
 # Storybook build outputs
 .out
